# agent-sdk

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
bu_agent_sdk/agent/: service.py
bu_agent_sdk/agent/tests/: test_streaming_model.py
bu_agent_sdk/examples/: live_chat_model_smoke.py
bu_agent_sdk/llm/: README.md  __init__.py  base.py  models.py  streaming.py
bu_agent_sdk/llm/google/: chat.py  serializer.py
bu_agent_sdk/llm/google/tests/: test_agent_mode.py
bu_agent_sdk/llm/grok/: __init__.py  chat.py  serializer.py
bu_agent_sdk/llm/grok/tests/: test_chat.py  test_serializer.py
bu_agent_sdk/llm/tests/: test_exports.py  test_live_chat_models.py  test_streaming_protocols.py
bu_agent_sdk/tokens/: mappings.py  service.py
docs/: RELEASING.md  llm-interface-analysis-2026-03-01.md
