[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-sdk"
version = "0.1.0"
description = "An agent is just a for-loop. The simplest possible agent framework."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Milind Sharma", email = "milindsharma8@gmail.com" }
]
keywords = ["agent", "llm", "ai", "tool-calling", "anthropic", "openai", "google"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "dotenv>=0.9.9",
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
google = ["google-genai>=1.0.0"]
observability = ["lmnr>=0.4.0"]

[project.urls]
Homepage = "https://github.com/Milind220/agent-sdk"
Documentation = "https://github.com/Milind220/agent-sdk#readme"
Repository = "https://github.com/Milind220/agent-sdk"

[tool.hatch.build.targets.wheel]
packages = ["bu_agent_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "/bu_agent_sdk",
    "/bu_agent_sdk/examples",
    "/README.md",
    "/LICENSE",
]
