[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-agent-sdk"
version = "0.2.0"
description = "An agent is just a for-loop. The simplest possible agent framework."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Milind Sharma", email = "milindsharma8@gmail.com" }
]
keywords = ["agent", "llm", "ai", "tool-calling", "anthropic", "openai", "google", "grok", "xai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "dotenv>=0.9.9",
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "anthropic>=0.84.0",
    "openai>=2.24.0",
    "google-genai>=1.65.0",
    "xai-sdk>=1.7.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.84.0"]
openai = ["openai>=2.24.0"]
google = ["google-genai>=1.65.0"]
grok = ["xai-sdk>=1.7.0"]
observability = ["lmnr>=0.4.0"]

[project.urls]
Homepage = "https://github.com/Milind220/agent-sdk"
Documentation = "https://github.com/Milind220/agent-sdk#readme"
Repository = "https://github.com/Milind220/agent-sdk"

[tool.hatch.build.targets.wheel]
packages = ["bu_agent_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "/bu_agent_sdk",
    "/bu_agent_sdk/examples",
    "/README.md",
    "/LICENSE",
]

[tool.semantic_release]
commit_message = "chore(release): {version}"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.branches.alpha]
match = "alpha"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
mode = "update"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
